# docs/swagger.json
@@ -145,6 +145,37 @@
                 }
             }
         },
+        "/albums/{id}/tracks": {
+            "get": {
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "albums"
+                ],
+                "summary": "List tracks for an album",
+                "parameters": [
+                    {
+                        "type": "integer",
+                        "description": "Album ID",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "array",
+                            "items": {
+                                "$ref": "#/definitions/handlers.TrackDTO"
+                            }
+                        }
+                    }
+                }
+            }
+        },
         "/artists": {
             "get": {
                 "produces": [
@@ -673,6 +704,14 @@
                     "tracks"
                 ],
                 "summary": "List tracks",
+                "parameters": [
+                    {
+                        "type": "integer",
+                        "description": "Filter by album ID",
+                        "name": "albumId",
+                        "in": "query"
+                    }
+                ],
                 "responses": {
                     "200": {
                         "description": "OK",
